[package]
name = "rust-command-opt"
version = "0.1.0"
authors = ["dicarne <hzdingjiahe@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A easy-to-use command line arguments Parser."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
